# shuriken-quickstart-rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-21-sdk-redesign-and-quickstart.md
docs/superpowers/specs/: 2026-04-21-sdk-redesign-and-quickstart-design.md
examples/: 01_account_info.rs  02_search_tokens.rs  03_token_analytics.rs  04_swap_quote.rs  05_portfolio_overview.rs  06_browse_perp_markets.rs  07_execute_swap.rs  08_trigger_orders.rs  09_perp_trading.rs  10_stream_token_swaps.rs  11_stream_wallet.rs  12_stream_new_tokens.rs  13_stream_graduated_tokens.rs  14_token_sniper.rs  15_whale_copy_trader.rs  16_portfolio_rebalancer.rs  17_new_token_screener.rs  18_perps_hedger.rs  19_trailing_stop.rs  20_watchlist_dashboard.rs  21_stream_alpha_personal.rs  22_stream_alpha_signal_feed_global.rs  23_stream_alpha_signal_feed_personal.rs  24_stream_alpha_signal_feed_named.rs  25_stream_alpha_signal_feed_profile.rs
src/: lib.rs
