[package]
name = "shuriken-quickstart-rs"
version = "0.1.0"
edition = "2021"
description = "Quickstart examples for the Shuriken Rust SDK"
license = "MIT"

[dependencies]
shuriken-sdk = { version = "0.4.0", features = ["ws"], path = "../shuriken-sdk-rs" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = "1"
serde_json = "1"
futures-util = "0.3"
